# dev-platform

./: .gitignore  README.md  get-pip.py
cmake/macros/: ClangFlags.cmake  DevCXXFlags.cmake  GCCFlags.cmake  MSVCFlags.cmake
examples/pyside/axcontainer/: axviewer.py
examples/pyside/charts/: memoryusage.py  modeldata.py
examples/pyside/charts/chartthemes/: main.py
examples/pyside/corelib/tools/settingseditor/: settingseditor.py
examples/pyside/declarative/: scrolling.py
examples/pyside/declarative/extending/chapter2-methods/: methods.py
examples/pyside/declarative/signals/qmltopy1/: main.py
examples/pyside/declarative/signals/qmltopy2/: main.py
examples/pyside/declarative/signals/qmltopy4/: main.py
examples/pyside/installer_test/: hello_app.spec
examples/pyside/network/: fortuneserver.py
examples/pyside/opengl/: 2dpainting.py
examples/pyside/opengl/textures/: textures.py
examples/pyside/remoteobjects/modelview/: modelviewclient.py  modelviewserver.py
examples/pyside/samplebinding/: CMakeLists.txt
examples/pyside/texttospeech/: texttospeech.py
examples/pyside/tutorial/: t10.py  t12.py  t13.py  t14.py  t4.py  t5.py  t8.py
examples/pyside/webenginewidgets/: simplebrowser.py
examples/pyside/widgets/animation/easing/: ui_form.py
examples/pyside/widgets/dialogs/classwizard/: classwizard.py
examples/pyside/widgets/draganddrop/draggabletext/: draggabletext.py
examples/pyside/widgets/effects/: lighting.py
examples/pyside/widgets/graphicsview/: anchorlayout.py  elasticnodes.py
examples/pyside/widgets/graphicsview/diagramscene/: diagramscene.py
examples/pyside/widgets/itemviews/addressbook/: addressbook.py  addresswidget.py  newaddresstab.py
examples/pyside/widgets/itemviews/stardelegate/: stardelegate.py  starrating.py
examples/pyside/widgets/layouts/: basiclayouts.py  dynamiclayouts.py
examples/pyside/widgets/mainwindows/dockwidgets/: dockwidgets.py
examples/pyside/widgets/mainwindows/mdi/: mdi.py
examples/pyside/widgets/painting/basicdrawing/: basicdrawing.py
examples/pyside/widgets/richtext/: syntaxhighlighter.py
examples/pyside/widgets/state-machine/: factstates.py  twowaybutton.py
examples/pyside/widgets/tutorials/addressbook/: part4.py
examples/pyside/widgets/widgets/: tetrix.py
examples/pyside/xml/dombookmarks/: dombookmarks.py
examples/pyside/xmlpatterns/schema/: schema.py  ui_schema.py
examples/shiboken2/: README.md
examples/shiboken2/Example_Qt_and_Shiboken2/: CMakeLists.txt  Shiboken2QtExample.pyd  macros.h  main.py  qobjectwithenum.h
examples/shiboken2/test-python-bings/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Universe.pyd  bindings.h  bindings.xml  library.h  macros.h  main.py
examples/swig/helloworld/: CMakeLists.txt  _hello.pyd  _hello.pyd.bak.msvc  hello.cpp  hello.h  hello.py  hello_import.py  print_hello.i  print_hello_wrap.cxx
examples/swig/qtbindings/: CMakeLists.txt  _wrap.pyd  example_qstring.cpp  example_qstring.h  example_qwidget.cpp  example_qwidget.h  wrap.cpp  wrap.h  wrap.i  wrap.py  wrap_import.py  wrap_wrap.cxx
license/: LICENSE.COMMERCIAL
python/centos7-python-2.7.17/include/python2.7/: pyconfig.h
python/centos7-python-2.7.17/lib/pkgconfig/: python-2.7.pc
python/centos7-python-2.7.17/lib/python2.7/: _sysconfigdata.py
python/centos7-python-2.7.17/lib/python2.7/config/: Makefile  Setup  config.c  makesetup
python/centos7-python-2.7.17/lib/python2.7/idlelib/: IOBinding.py  NEWS.txt  SearchDialogBase.py  keybindingDialog.py
python/centos7-python-2.7.17/lib/python2.7/lib-tk/test/test_ttk/: test_widgets.py
python/centos7-python-2.7.17/lib/python2.7/sqlite3/test/: factory.py
python/centos7-python-2.7.17/lib/python2.7/test/: bisect_cmd.py  regrtest.py  ssl_servers.py  test_cookielib.py  test_descr.py  test_docxmlrpc.py  test_gdb.py  test_itertools.py  test_msilib.py  test_multiprocessing.py  test_os.py  test_ssl.py  test_timeout.py  test_tools.py  test_urllib.py  test_urllib2.py  test_urllib2net.py  test_urllibnet.py  test_urlparse.py  test_wsgiref.py  test_xmlrpc.py
python/centos7-python-2.7.17/share/man/man1/: python2.7.1
python/centos7-python-3.7.5/include/python3.7m/: pyconfig.h
python/centos7-python-3.7.5/lib/pkgconfig/: python-3.7.pc
python/centos7-python-3.7.5/lib/python3.7/: _sysconfigdata_m_linux_x86_64-linux-gnu.py
python/centos7-python-3.7.5/lib/python3.7/config-3.7m-x86_64-linux-gnu/: Makefile  Setup  config.c  config.c.in  makesetup  python-config.py
python/centos7-python-3.7.5/lib/python3.7/distutils/tests/: xxmodule.c
python/centos7-python-3.7.5/lib/python3.7/test/decimaltestdata/: divide.decTest  multiply.decTest
python/centos7-python-3.7.5/share/man/man1/: python3.7.1
python/windows10-python-2.7.15/Scripts/: pip.bat  pyinstaller.bat  pyside2-lupdate-script.py  pyside2-rcc-script.py  pyside2-uic-script.py  shiboken2-script.py
python/windows10-python-3.7.7/Scripts/: pyside2-lupdate-script.py  pyside2-rcc-script.py  pyside2-rcc.bat  pyside2-uic-script.py  pyside2-uic.bat  shiboken2-script.py  virtualenv.bat
python/windows10-python-3.7.7/fdfs_client.egg-info/: PKG-INFO
test/: test_example_hello.py  test_widget.py
test/examples/3d/: simple3d.py
test/examples/charts/: callout.py
test/examples/charts/chartthemes/: ui_themewidget.py
test/examples/datavisualization/: bars3d.py
test/examples/declarative/signals/pytoqml1/: main.py
test/examples/multimedia/: camera.py
test/examples/tutorial/: t7.py
test/examples/widgets/itemviews/: fetchmore.py
test/examples/widgets/mainwindows/application/: application.py
test/examples/widgets/richtext/: orderform.py
test/examples/widgets/tutorials/addressbook/: part5.py  part6.py
